# ai-

./: .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/agents/: compliance_check.py  copywriting.py  cover_image.py  data_analysis.py  orchestrator.py  orders.py  video_analysis.py  video_breakdown.py  video_review.py  video_script.py
app/graph/: state.py  workflow.py
app/models/: llm.py  schemas.py
app/tools/: database.py  image_gen.py
app/utils/: logger.py  streaming.py
static/: app.js  index.html  style.css
tests/: test_agents.py  test_orchestrator.py  test_workflow.py
